--- a/WindowsFormsApplication1/Properties/Resources.resx
+++ b/WindowsFormsApplication1/Properties/Resources.resx
@@ -118,79 +118,103 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="buscando" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buscando.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="caja-registradora1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\caja-registradora.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="clasificacion" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\clasificacion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="flecha-ampliar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\flecha-ampliar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="menu-en-boton-de-expansion" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\menu-en-boton-de-expansion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="nuevo-usuario" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\nuevo-usuario1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="impresora" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\impresora.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="2545" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\2545.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="lupa" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lupa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="menu-en-boton-de-expansion1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\menu-en-boton-de-expansion1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="expandir-boton" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\expandir-boton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="image" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="degradados_azules_1920x1200_127-1024x640 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\degradados_azules_1920x1200_127-1024x640 (1).jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="degradados_azules_1920x1200_127-1024x640 (1)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\degradados_azules_1920x1200_127-1024x640 (1)1.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="movimiento-de-la-mano" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\movimiento-de-la-mano.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="textura-de-gradiente-de-acuarela-en-tonos-azules_23-2147508391" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\textura-de-gradiente-de-acuarela-en-tonos-azules_23-21475083911.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="caja-registradora" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\caja-registradora.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="b_1309256029901" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\b_1309256029901.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="LOGO_GRUPO_DIONYS (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\LOGO_GRUPO_DIONYS (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="large-background-1024x724" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\large-background-1024x7241.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="6151" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\6151.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="b_13092560299011" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\b_1309256029901.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="agrandar" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\agrandar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="nuevo-usuario" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\nuevo-usuario1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="abstract_background_red-1024x768" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\abstract_background_red-1024x7681.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="caja-registradora" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\caja-registradora.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buscando1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buscando1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="analitica" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\analitica.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="movimiento-de-la-mano" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\movimiento-de-la-mano.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="impresora (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\impresora (1).ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menu-en-boton-de-expansion1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\menu-en-boton-de-expansion1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LOGO_GRUPO_DIONYS (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\LOGO_GRUPO_DIONYS (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="reportar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reportar.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="b_13092560299011" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\b_1309256029901.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buscando3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buscando.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="menu-en-boton-de-expansion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\menu-en-boton-de-expansion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="expandir-boton" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\expandir-boton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lupa" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lupa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="6151" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\6151.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="clasificacion" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\clasificacion.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="menu-en-boton-de-expansion (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\menu-en-boton-de-expansion (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="agrandar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\agrandar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="large-background-1024x724" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\large-background-1024x7241.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="degradados_azules_1920x1200_127-1024x640 (1)1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\degradados_azules_1920x1200_127-1024x640 (1)1.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="b_1309256029901" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\b_1309256029901.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="textura-de-gradiente-de-acuarela-en-tonos-azules_23-2147508391" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\textura-de-gradiente-de-acuarela-en-tonos-azules_23-21475083911.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="buscando2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\buscando2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="2545" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\2545.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="degradados_azules_1920x1200_127-1024x640 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\degradados_azules_1920x1200_127-1024x640 (1).jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="flecha-ampliar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\flecha-ampliar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="74370-OEB5DU-339" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\74370-OEB5DU-339.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="abstract_background_red-1024x7681" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\abstract_background_red-1024x7682.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
